# Jenkinstest

./: DockerFile  Jenkinsfile  ubuntu_build.sh
APITest/: CMakeLists.txt  CMakeLists1.txt  GoogleTestMechMindSDK.cpp  README.md  installer.sh
APITest/test_case/: TestFixture.cpp  TestFixture.h
APITest/test_case/area/: CameraFixture.h  CameraFunction.cpp  CameraFunction.h
APITest/test_case/area/invalid/: TestCaseInvalidUserSet.cpp
APITest/test_case/area/invalid/parameter/: TestCaseInvalid2d.cpp  TestCaseInvalid3d.cpp  TestCaseInvalidLaser.cpp  TestCaseInvalidPointCloud.cpp  TestCaseInvalidProjector.cpp  TestCaseInvalidUHP.cpp
APITest/test_case/area/valid/: TestCaseMessage.cpp  TestCaseUserSet.cpp
APITest/test_case/area/valid/parameter/: TestCase2d.cpp  TestCase3d.cpp  TestCaseLaser.cpp  TestCasePointCloud.cpp  TestCaseProjector.cpp  TestCaseUHP.cpp  TestParameterAttribute.cpp
APITest/test_case/profiler/: ProfilerFunction.cpp  ProfilerFunction.h
APITest/test_case/profiler/valid/parameter/: TestCaseProfileExtractionParameters.cpp  TestCaseProfileProcessingParameters.cpp  TestCaseRawImageParameters.cpp  TestCaseScan.cpp
APITestPy/: base_test_case.py  installer.sh  main.py  requirements.txt
APITestPy/area/capture/: test_case_frame_2d_3d.py
APITestPy/files/: intensity.tiff  test.json
APITestPy/report/: MechEyeAPI_192.168.20.113_自动化测试报告2023-12-07_17-22-34.html
MyJenkinsTest/: name.py
